commit tetris fonctionnel
Co-authored-by: Ramirez-Arnaud-EMF <Ramirez-Arnaud-EMF@users.noreply.github.com>

--- a/Test Emulator/client/index.html
+++ b/Test Emulator/client/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>emulator</title>
-    <script src="./emulator.js"></script>
-</head>
-<body>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ArcadiaBox</title>
 
-    <div style='width:640px;height:480px;max-width:100%'>
-        <div id='game'></div>
-    </div>
-    
+  <!-- <link rel="stylesheet" href="../data/emulator.css"> -->
+</head>
+
+<body>
+  <div style="width:640px;height:480px;max-width:100%">
+    <div id="Tetris"></div>
+  </div>
+
+  <script src="./emulator.js"></script>
+
+  <script src="./../EmulatorJS-4.2.3/data/loader.js"></script>
 </body>
 </html>
