correction pacan db

--- a/code/ArcadiaBox/Frontend/test.html
+++ b/code/ArcadiaBox/Frontend/test.html
@@ -18,8 +18,8 @@
         <small style="display: block; margin-top: 8px; opacity: 0.8;">Top 10 meilleurs scores</small>
       </a>
       
-      <a class="btn" href="score.html?game=Pac-Man" style="font-size: 1.2rem;">
-        👻 Pac-Man
+      <a class="btn" href="score.html?game=Snake" style="font-size: 1.2rem;">
+        👻 Snake
         <small style="display: block; margin-top: 8px; opacity: 0.8;">Top 10 meilleurs scores</small>
       </a>
       
