--- a/code/ArcadiaBox/Frontend/index.html
+++ b/code/ArcadiaBox/Frontend/index.html
@@ -85,9 +85,9 @@
     <p class="subtitle">A / D ou ← / → — Entrée pour jouer</p>
 
     <section class="menu">
-      <a class="btn" href="./views/mario.html">Super Mario Bros NES<small>Space Runner</small></a>
-      <a class="btn" href="jeu2.html">Jeu 2<small>Neon Snake</small></a>
-      <a class="btn" href="jeu3.html">Jeu 3<small>Pixel Shooter</small></a>
+      <a class="btn" href="./views/mario.html">Super Mario Bros<small></small></a>
+      <a class="btn" href="./views/snake.html">Snake<small></small></a>
+      <a class="btn" href="jeu3.html">Jeu 3<small></small></a>
     </section>
   </main>
 
